global.css
:root {
  /* Spacing */
  --spacing-100: 0.5rem;
  --spacing-200: 1rem;
  --spacing-300: 1.5rem;
  --spacing-400: 2rem;
  --spacing-500: 2.5rem;
  --spacing-600: 3rem;
  --spacing-800: 4rem;
  --spacing-900: 4.5rem;
  --spacing-1300: 6.5rem;

  /* Typography */
  --text-1: 3.5rem;
  --text-1-mobile: 2.5rem;
  --text-2: 1rem;
  --text-3: 0.75rem;
  --text-bold: 700;

  /* Color */
  --clr-white: #FFFFFF;
  --clr-grey: #949494;
  --clr-blue-700: #36384D;
  --clr-blue-800: #242742;
  --clr-red: #FF6155;
  --clr-red-100: #FFE7E6;
  --clr-gradient: linear-gradient(#FF6A3A, #FF527B);
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  font-family: "Roboto", sans-serif;
  min-height: 100svh;
  min-height: 100vh;

  background-color: var(--clr-blue-800);
  margin: 0;
  padding: 0;
}

h1,
p {
  margin: 0;
  padding: 0;
}

main {
  min-height: 100svh;
  min-height: 100vh;
}

ul {
  list-style-image: url('./assets/images/icon-list.svg');
  padding-inline-start: 1.875rem;
  padding-inline-end: 1em;
}

li {
  line-height: 1.5;
}

h1 {
  max-inline-size: 15ch;
  color: var(--clr-blue-800);
  font-weight: var(--text-bold);
  font-size: clamp(var(--text-1-mobile), 0.7609rem + 8.6957vw, var(--text-1));
}

